  accordingly.  Similarly, any code using ``SSHConnection`` directly will
  need to be updated.  (Andrew Bennetts)

* The constructor of ``bzrilb.smart.medium.SmartSSHClientMedium`` has
  changed to take an ``SSHParams`` instance (replacing many individual
  values).  (Andrew Bennetts)

Internals
*********

* Improved ``bzrlib.urlutils`` to handle lp:foo/bar URLs. (Gordon Tyler)

Testing
*******

* Add ``bzrlib.tests.fixtures`` to hold code for setting up objects
  to test.  (Martin Pool)

* ``test_import_tariff`` now respects BZR_PLUGINS_AT and BZR_PLUGINS_DISABLE.
  (Vincent Ladeuil, #595587)

bzr 2.2b3
#########

:2.2b3: 2010-05-28

This third beta in the 2.2 series brings with it all the goodness of 2.1.2
and 2.0.6 (though it preceeds 2.0.6 slightly). Of particular note for
users are compatibility fixes with bzr 1.5 and below servers, a hopeful
end to the EINTR errors caused by SIGWINCH interactions, a shiny new
bash completion script and bzr will no longer guess at identity details -
it was too unreliable in reality. Use ``bzr whoami`` on every new install.
For developers we have some API changes which may impact plugins as well
as a bunch of our regular improvements to internal clarity and test
support.

Compatibility Breaks
********************

* An API break has been made to the lock_write method of ``Branch`` and
  ``Repository`` objects; they now return ``branch.BranchWriteLockResult``
  and ``repository.RepositoryWriteLockResult`` objects. This makes
  changing the API in future easier and permits some cleaner calling code.
  The lock_read method has also changed from having no defined return
  value to returning ``LogicalLockResult`` objects.
  (Robert Collins)

* ``bzr`` does not try to guess the username as ``username@hostname``
  and requires it to be explictly set. This can be set using ``bzr
  whoami``. (Parth Malwankar, #549310)

* ``bzrlib.commands.Command`` will now raise ValueError during